:wrench: Fix Alignment & Menu Options
• Adjusted album artwork to be level w/ lyrics

• Menu now has options for 'Lyrics' and 'Presskit' (Next Feature). All other media can be accessed from below direct links

--- a/css.css
+++ b/css.css
@@ -213,11 +213,12 @@ h3{
 }
 
 .album {
-  margin-bottom: 4rem;
+  margin-bottom: 2.4rem;
 }
 @media (min-width: 767px) {
   .album {
     width: 100%;
+	margin-top: -24px;
   }
 }
 
